# llm-policies-social-dilemmas

./: CLAUDE.md  LICENSE  README.md  autoresearch_ssd.tex  cleanup_env.py  cleanup_qlearning.py  coop_mining_env.py  demo_env_reward_hack.py  gathering_env.py  gathering_policy.py  gathering_qlearning.py  llm_self_play.py  pyproject.toml  requirements.txt  run_gepa_ssd.py  run_inner_loop.py  ssd_verifier_env.py
autoresearch/: analysis_workshop.md  analyze.py  measure.sh  program.md  run_experiment.sh
pipeline/: __init__.py  config.py  feedback.py  helpers.py  prompts.py
