[project]
name = "ssd-llm-policy-synthesis"
version = "0.1.0"
description = "LLM Policy Synthesis for Sequential Social Dilemmas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Víctor Gallego" },
]

dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "claude-agent-sdk>=0.1.36",
    "google-genai>=1.0",
    "gepa>=0.0.4",
    "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers.git@v0.1.11",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
